--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,202 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+img {
+  width: 100%;
+}
+
+ul, li {
+  list-style: none;
+}
+
 body {
   font-size: 16px;
   overflow-y: auto;
   overflow-x: hidden;
+  background-color: #F4F4F4;
 }
 
 .container {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 16px;
+}
+
+header {
+  background-color: #ffffff;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.top-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 8px 0;
+}
+
+.top-nav .sha-logo {
+  width: 35px;
+  margin: auto 0;
+  margin-right: 12px;
+}
+
+.top-nav .sha-text span {
+  font-size: 14px;
+}
+
+.nav {
+  border-top: 1px solid #b8b8b8;
+}
+
+.nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.list-item {
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  padding: 16px;
+}
+
+.list-item:first-child {
+  padding-left: 0;
+}
+
+.list-item .list-item-text {
+  position: relative;
+}
+
+.list-item .list-item-text svg {
+  width: 8px;
+}
+
+.list-item:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #FF5E15;
+  width: 100%;
+  height: 4px;
+}
+
+.list-item:hover .list-item-text {
+  color: #FF5E15;
+}
+
+.list-item:hover .list-item-text svg {
+  fill: #FF5E15;
+}
+
+.list-item:hover .list-dropdown-inner {
+  display: block;
+}
+
+.list-item .list-dropdown-inner {
+  background-color: #ffffff;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  min-width: 300px;
+  max-height: 450px;
+  overflow-y: scroll;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  display: none;
+}
+
+.list-item .list-dropdown-inner .drop-list {
+  padding: 16px 8px;
+  border-bottom: 1px solid #b8b8b8;
+  font-size: 14px;
+}
+
+.list-item .list-dropdown-inner .drop-list:last-child {
+  border-bottom: 0;
+}
+
+.list-item .list-dropdown-inner .drop-list:hover {
+  background-color: #FF5E15;
+  color: #ffffff;
+}
+
+.mobile-nav {
+  padding: 8px 0;
+  display: none;
+}
+
+.mobile-nav .mobile-bar {
+  width: 20px;
+}
+
+.mobile-nav .mobile-bar:hover {
+  fill: #FF5E15;
+}
+
+@media screen and (max-width: 991px) {
+  .nav-list {
+    display: none;
+  }
+  .nav-list .list-item {
+    display: block;
+  }
+  .mobile-nav {
+    display: block;
+  }
+}
+
+main {
+  padding: 20px 0;
+}
+
+.ip-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #4B4B4B;
+  font-size: 12px;
+}
+
+.ip-info .ip-company {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+.ip-info .ip-user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.ip-info .ip-user .ip-infos {
+  margin-left: 16px;
 }
 /*# sourceMappingURL=style.css.map */
