--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,212 @@
+$white:#ffffff;
+$white-gray:#F4F4F4;
+$pale-gray:#b8b8b8;
+$dark-gray:#4B4B4B;
+$black:#000000;
+$orange:#FF5E15;
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+img{
+    width: 100%;
+}
+
+ul,li{
+    list-style: none;
+}
 
 body{
     font-size: 16px;
     overflow-y: auto;
     overflow-x: hidden;
+    background-color: $white-gray;
 }
 
 .container{
     max-width: 1280px;
     margin: 0 auto;
+    padding: 0 16px;
+}
+
+header{
+    background-color: $white;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.top-nav{
+    display: flex;
+    padding: 8px 0;
+
+    .sha-logo{
+        width: 35px;
+        margin: auto 0;
+        margin-right: 12px;
+    }
+
+    .sha-text{
+
+        span{
+            font-size: 14px;
+        }
+
+    }
+
+}
+
+.nav{
+    border-top: 1px solid $pale-gray;
+}
+
+.nav-list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-item{
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+    padding: 16px;
+
+    &:first-child{
+        padding-left: 0;
+    }
+
+    .list-item-text{
+        position: relative;
+
+        svg{
+            width: 8px;
+        }
+
+    }
+
+    &:hover{
+        
+        &::after{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: $orange;
+            width: 100%;
+            height: 4px;
+        }
+
+        .list-item-text{
+            color: $orange;
+
+            svg{
+                fill: $orange;
+            }
+        }
+        
+
+        .list-dropdown-inner{
+            display: block;
+        }
+    }
+
+    .list-dropdown-inner{
+        background-color: $white;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        min-width: 300px;
+        max-height: 450px;
+        overflow-y: scroll;
+        box-shadow: 0 3px 10px rgba($color: $black, $alpha:0.2);
+        display: none;
+
+        .drop-list{
+            padding: 16px 8px;
+            border-bottom: 1px solid $pale-gray;
+            font-size: 14px;
+
+            &:last-child{
+                border-bottom: 0;
+            }
+
+            &:hover{
+                background-color: $orange;
+                color: $white;
+            }
+        }
+    }
+}
+
+.mobile-nav{
+    padding: 8px 0;
+    display: none;
+
+    .mobile-bar{
+        width: 20px;
+
+        &:hover{
+            fill: $orange;
+        }
+    }
+
+}
+
+@media screen and (max-width: 991px){
+
+    .nav-list{
+        display: none;
+
+        .list-item{
+            display: block;
+        }
+
+    }
+
+    .mobile-nav{
+        display: block;
+    }
+
+}
+
+main{
+    padding: 20px 0;
+}
+
+
+.ip-info{
+    display: flex;
+    color: $dark-gray;
+    font-size: 12px;
+
+    .ip-company{
+        flex: auto;
+    }
+
+    .ip-user{
+        display: flex;
+
+        .ip-infos{
+            margin-left: 16px;
+        }
+    }
 }
