--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,31 @@ img {
   width: 100%;
 }
 
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
 ul, li {
   list-style: none;
 }
@@ -32,12 +57,41 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   background-color: #F4F4F4;
+  position: relative;
+}
+
+body::before {
+  content: "";
+  background: url(../img/online/loginbg-left.png) left bottom no-repeat;
+  background-size: 25%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+body::after {
+  content: "";
+  background: url(../img/online/loginbg-right.png) right bottom no-repeat;
+  background-size: 25%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
 }
 
 .container {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 16px;
+}
+
+.content {
+  padding: 20px 0;
 }
 
 header {
@@ -198,5 +252,99 @@ main {
 
 .ip-info .ip-user .ip-infos {
   margin-left: 16px;
+}
+
+.page-title {
+  padding: 16px 0;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #b8b8b8;
+}
+
+.notify {
+  margin-bottom: 40px;
+}
+
+.notify-title {
+  margin-bottom: 16px;
+  color: #4B4B4B;
+}
+
+.notify-content {
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+
+.notify-content .notify-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 16px;
+}
+
+.notify-content .notify-block.head {
+  border-radius: 8px 8px 0 0;
+  color: #ffffff;
+}
+
+.notify-content .notify-block.blue {
+  background-color: #0072EC;
+}
+
+.notify-content .notify-block.green {
+  background-color: #19AD79;
+}
+
+.notify-content .notify-block.gray {
+  background-color: #757575;
+}
+
+.notify-content .notify-block .n-item {
+  padding: 0 8px;
+  margin: auto 0;
+}
+
+.notify-content .notify-block .n-item:first-child {
+  padding-left: 0;
+}
+
+.notify-content .notify-block .sum {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 85%;
+          flex: 1 0 85%;
+  max-width: 85%;
+}
+
+.notify-content .notify-block .date {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 6%;
+          flex: 1 0 6%;
+  max-width: 6%;
+  text-align: center;
+}
+
+.notify-content .notify-block .last {
+  margin: auto;
+}
+
+.notify-content .notify-block .new {
+  border-radius: 4px;
+  padding: 2px 4px;
+  color: #ffffff;
+}
+
+.notify-content .notify-block .new::after {
+  content: "new";
+}
+
+.notify-content .notify-block .new.blue {
+  background-color: #0072EC;
+}
+
+.notify-content .notify-block .new.green {
+  background-color: #19AD79;
+}
+
+.notify-content .notify-block .new.gray {
+  background-color: #757575;
 }
 /*# sourceMappingURL=style.css.map */
