--- a/bro/css/style.css
+++ b/bro/css/style.css
@@ -1,21 +1,21 @@
-#titlecube{
+.titlecube{
     margin-top: 0%;
 }
 
-#texttitle1{
+.texttitle1{
     margin-left: 20rem;
     font-size: 16px;
     font-family: Microsoft JhengHei;
 }
 
-#texttitle2{
+.texttitle2{
     margin-left: 20rem;
     font-size: 20px;
     font-family: Microsoft JhengHei;
     font-weight: bold;
 }
 
-#topcube{
+.topcube{
     margin-left: 20rem;
     width: 800px;
     height: 500px;
@@ -23,7 +23,7 @@
     top: 15px;
 }
 
-#texttop{
+.texttop{
     font-size: 40px;
     font-family: Microsoft JhengHei;
     font-weight: bold;
@@ -33,7 +33,7 @@
     left: 60px;
 }
 
-#msgcube{
+.msgcube{
     margin-top: -29.75rem;
     margin-bottom: 5rem;
     margin-left: 20rem;
@@ -43,7 +43,7 @@
     background-color: #FFF;    
 }
 
-#textmsg{
+.textmsg{
     font-size: 20px;
     font-family: Microsoft JhengHei;
     font-weight: bold;
@@ -73,12 +73,12 @@
     font-weight: bold;
     border: 15pt solid #FFFFFF;
 }
-.checkout-mbtn .mbtn.active {
+.checkout-mbtn .mbtn.active{
     background-color: #FF8800;
     color: #FFFFFF;
 }
 
-#textannc1{
+.textannc1{
     font-size: 10px;
     font-family: Microsoft JhengHei;
     font-weight: bold;
@@ -86,9 +86,10 @@
     position: absolute;
     top: 180px;
     left: 25px;
+    width: 90%;
 }
 
-#texthelp{
+.texthelp{
     font-size: 12px;
     font-family: Microsoft JhengHei;
     font-weight: bold;
@@ -98,7 +99,7 @@
     left: 25px;
 }
 
-#logincube{
+.logincube{
     display: flex;
     flex-direction: column;
     margin-top: -7rem;
@@ -110,6 +111,19 @@
     position: relative;
 }
 
-#btmcube{
+.lbtn-QR{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FF8800;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-family: Microsoft JhengHei;
+    font-weight: bold;
+    line-height: 38px;
+    width: 80%;
+}
+
+.btmcube{
     text-align: center;
 }
