--- a/bro/css/style.css
+++ b/bro/css/style.css
@@ -1,129 +1,1 @@
-.titlecube{
-    margin-top: 0%;
-}
-
-.texttitle1{
-    margin-left: 20rem;
-    font-size: 16px;
-    font-family: Microsoft JhengHei;
-}
-
-.texttitle2{
-    margin-left: 20rem;
-    font-size: 20px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-}
-
-.topcube{
-    margin-left: 20rem;
-    width: 800px;
-    height: 500px;
-    position: relative;
-    top: 15px;
-}
-
-.texttop{
-    font-size: 40px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    color: #FFF;
-    position: absolute;
-    top: 200px;
-    left: 60px;
-}
-
-.msgcube{
-    margin-top: -29.75rem;
-    margin-bottom: 5rem;
-    margin-left: 20rem;
-    width: 600px;
-    height: 400px;
-    position: relative;
-    background-color: #FFF;    
-}
-
-.textmsg{
-    font-size: 20px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    position: absolute;
-    top: 30px;
-    left: 25px;
-}
-
-.mbtn-group {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 12%;
-}
-
-.checkout-mbtn {
-    width: 100%;
-}
-.checkout-mbtn .mbtn {
-    width: 18%;
-    line-height: 44px;
-    font-size: 14px;
-    background-color: #AAAAAA;
-    color: #000000;
-    text-align: center;
-    font-weight: bold;
-    border: 15pt solid #FFFFFF;
-}
-.checkout-mbtn .mbtn.active{
-    background-color: #FF8800;
-    color: #FFFFFF;
-}
-
-.textannc1{
-    font-size: 10px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    color: #AAA;
-    position: absolute;
-    top: 180px;
-    left: 25px;
-    width: 90%;
-}
-
-.texthelp{
-    font-size: 12px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    color: #AAA;
-    position: absolute;
-    top: 360px;
-    left: 25px;
-}
-
-.logincube{
-    display: flex;
-    flex-direction: column;
-    margin-top: -7rem;
-    margin-bottom: 4.75rem;
-    margin-left: 58.75rem;
-    width: 280px;
-    height: 400px;
-    background-color: #FFF;
-    position: relative;
-}
-
-.lbtn-QR{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FF8800;
-    color: #FFFFFF;
-    font-size: 14px;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    line-height: 38px;
-    width: 80%;
-}
-
-.btmcube{
-    text-align: center;
-}
+/* No CSS *//*# sourceMappingURL=style.css.map */
