--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,18 @@
 $white:#ffffff;
 $white-gray:#F4F4F4;
+$light-gray:#e0e0e0;
 $pale-gray:#b8b8b8;
 $middle-gray:#757575;
 $dark-gray:#4B4B4B;
+$deep-gray:#393939;
 $black:#000000;
 $orange:#FF5E15;
 $blue:#0072EC;
+$light-blue:#E8F0FE;
 $green:#19AD79;
+$red:#DA1E28;
+
+@import '_grid';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -20,7 +26,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video,input,select,textarea {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -58,12 +64,19 @@ h5{
     font-weight: bold;
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 ul,li{
     list-style: none;
 }
 
 body{
     font-size: 16px;
+    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: $white-gray;
@@ -103,11 +116,42 @@ body{
 }
 
 .content{
-    padding: 20px 0;
+    padding: 20px 0 100px;
 }
 
 header{
     background-color: $white;
+    min-height: 133px;
+}
+
+main{
+    padding: 20px 0;
+    min-height: calc(100vh - 133px);
+    margin-bottom: -50px;
+}
+
+footer{
+    background-color: $dark-gray;
+    padding: 16px;
+    color: $white;
+    font-size: 12px;
+    text-align: center;
+    height: 50px;
+}
+
+.btns{
+    background-color: $deep-gray;
+    color: $white;
+    padding: 8px 16px;
+    text-align: center;
+
+    &:hover{
+        background-color: $orange;
+    }
+
+    .text{
+        min-width: 50px;
+    }
 }
 
 .bold{
@@ -185,6 +229,7 @@ header{
 
         .list-dropdown-inner{
             display: block;
+            z-index: 9;
         }
     }
 
@@ -247,10 +292,6 @@ header{
 
 }
 
-main{
-    padding: 20px 0;
-}
-
 
 .ip-info{
     display: flex;
@@ -274,16 +315,30 @@ main{
     padding: 16px 0;
     margin-bottom: 20px;
     border-bottom: 1px solid $pale-gray;
+    display: flex;
+
+    h3{
+        flex: auto;
+    }
+}
+
+.page-title-btns{
+    display: flex;
+
+    .btns{
+        margin-left: 16px;
+    }
+}
+
+.blocky-title{
+    margin-bottom: 16px;
+    color: $dark-gray;
 }
 
 .notify{
     margin-bottom: 40px;
 }
 
-.notify-title{
-    margin-bottom: 16px;
-    color: $dark-gray;
-}
 
 .notify-content{
     background-color: $white;
@@ -358,6 +413,148 @@ main{
             }
         }
         
+    }
+
+}
+
+input{
+    appearance: none;
+    outline: none;
+    width: 100%;
+
+    &::placeholder{
+        color: $pale-gray;
+    }
+
+    &[type="radio"]{
+        border: 2px solid $middle-gray;
+        border-radius: 99em;
+        width: 18px;
+        height: 18px;
+        position: relative;
+        margin: auto 4px;
+    }
+
+    &[type="radio"]:checked{
+
+        &::after{
+            content: "";
+            border-radius: 99em;
+            width: 8px;
+            height: 8px;
+            background-color: $middle-gray;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
+
+.select{
+    appearance: none;
+    outline: none;
+    width: 100%;
+}
+
+input,select{
+    cursor: pointer;
+    border: 2px solid $white-gray;
+
+    &.input-style{
+        padding: 8px;
+        background-color: $white-gray;
+        border-bottom: 2px solid $middle-gray;
+
+        &:focus{
+            border-bottom: 2px solid $orange;
+        }
+        
+    }
+
+    &:focus{
+        border: 2px solid $orange;
+    }
+}
+
+.form-wrap{
+    background-color: $white;
+    margin-top: 20px;
+}
+
+.form-title{
+    padding: 16px;
+    background-color: $light-gray;
+
+    span{
+        color: $red;
+    }
+}
+
+.form-body{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-col{
+    display: flex;
+    border-bottom: 1px solid $pale-gray;
+
+    .form-name{
+        background-color: $light-blue;
+        padding: 20px 12px;
+        margin-left: -1rem;
+        display: flex;
+        font-weight: bold;
+        min-width: 200px;
+        max-width: 200px;
+
+        span{
+            margin: auto 0;
+        }
+
+        &.require{
+
+            &::after{
+                content: "*";
+                color: $red;
+                margin: auto 0;
+            }
+        }
+
+    }
+
+    .form-group{
+        padding: 12px 16px;
+        width: 100%;
+        max-width: 600px;
+        display: flex;
+
+        p{
+            margin: auto 0;
+            padding: 0 8px;
+        }
+
+        .w-50{
+            width: 60%;
+            max-width: 60%;
+        }
+
+        .input-hint{
+            padding-left: 16px;
+            margin: auto 0;
+        }
+
+        .input-radio{
+            margin: auto 0; 
+            display: flex;
+
+            label{
+                padding-right: 32px;
+                cursor: pointer;
+            }
+
+        }
     }
 
 }
