--- a/css/style.css
+++ b/css/style.css
@@ -587,19 +587,90 @@
   }
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video, input, select, textarea {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+input,
+select,
+textarea {
   margin: 0;
   padding: 0;
   border: 0;
@@ -610,6 +681,7 @@ time, mark, audio, video, input, select, textarea {
 
 img {
   width: 100%;
+  display: block;
 }
 
 h1 {
@@ -643,8 +715,14 @@ a {
   cursor: pointer;
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
 body {
@@ -687,10 +765,10 @@ body::after {
 }
 
 .content {
-  padding: 20px 0 100px;
+  padding: 20px 0 50px;
 }
 
-header {
+header.page-head {
   background-color: #ffffff;
   min-height: 133px;
 }
@@ -698,7 +776,6 @@ header {
 main {
   padding: 20px 0;
   min-height: calc(100vh - 133px);
-  margin-bottom: -50px;
 }
 
 footer {
@@ -710,19 +787,46 @@ footer {
   height: 50px;
 }
 
+.m-auto {
+  margin: auto;
+}
+
+.d-block {
+  display: block;
+}
+
 .btns {
-  background-color: #393939;
-  color: #ffffff;
   padding: 8px 16px;
   text-align: center;
 }
 
-.btns:hover {
+.btns .text {
+  min-width: 50px;
+}
+
+.btns.btn-black {
+  background-color: #393939;
+  color: #ffffff;
+}
+
+.btns.btn-black:hover {
   background-color: #FF5E15;
 }
 
-.btns .text {
-  min-width: 50px;
+.btns.btn-orange {
+  background-color: #FF5E15;
+  color: #ffffff;
+}
+
+.btns.btn-outline-orange {
+  background-color: #ffffff;
+  color: #FF5E15;
+  border: 1px solid #FF5E15;
+}
+
+.btns.btn-outline-orange:hover {
+  background-color: #FF5E15;
+  color: #ffffff;
 }
 
 .bold {
@@ -1037,6 +1141,13 @@ input[type="radio"]:checked::after {
           transform: translate(-50%, -50%);
 }
 
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #393939;
+  border-radius: 4px;
+}
+
 .select {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1045,23 +1156,32 @@ input[type="radio"]:checked::after {
   width: 100%;
 }
 
-input, select {
+input,
+select {
   cursor: pointer;
-  border: 2px solid #F4F4F4;
+  border: 1px solid #F4F4F4;
 }
 
-input.input-style, select.input-style {
+input.input-style,
+select.input-style {
   padding: 8px;
   background-color: #F4F4F4;
-  border-bottom: 2px solid #757575;
+  border-bottom: 1px solid #757575;
 }
 
-input.input-style:focus, select.input-style:focus {
-  border-bottom: 2px solid #FF5E15;
+input.input-style:focus,
+select.input-style:focus {
+  border-bottom: 1px solid #FF5E15;
 }
 
-input:focus, select:focus {
-  border: 2px solid #FF5E15;
+input.input-style.error,
+select.input-style.error {
+  border: 1px solid #DA1E28;
+}
+
+input:focus,
+select:focus {
+  border: 1px solid #FF5E15;
 }
 
 .form-wrap {
@@ -1122,6 +1242,7 @@ input:focus, select:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: -1rem;
 }
 
 .form-col .form-group p {
@@ -1135,8 +1256,8 @@ input:focus, select:focus {
 }
 
 .form-col .form-group .input-hint {
-  padding-left: 16px;
   margin: auto 0;
+  margin-left: 16px;
 }
 
 .form-col .form-group .input-radio {
@@ -1150,4 +1271,338 @@ input:focus, select:focus {
   padding-right: 32px;
   cursor: pointer;
 }
-/*# sourceMappingURL=style.css.map */
+
+.table-part {
+  margin-top: 50px;
+}
+
+.table-wrap {
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.action-block {
+  background-color: #393939;
+  padding: 12px 16px;
+  color: #ffffff;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  min-width: 176px;
+  cursor: pointer;
+}
+
+.action-block:hover {
+  background-color: #FF5E15;
+}
+
+.action-block .icon {
+  width: 16px;
+  margin: auto 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.action-block .icon svg {
+  margin: auto 0;
+}
+
+.action-block .text {
+  margin: auto 0;
+}
+
+.check-apply {
+  background-color: #ffffff;
+}
+
+.check-apply thead {
+  background-color: #e0e0e0;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.check-apply tbody tr {
+  border-bottom: 1px solid #b8b8b8;
+}
+
+.check-apply tbody tr:last-child {
+  border-bottom: 0;
+}
+
+.check-apply th,
+.check-apply td {
+  width: 1%;
+  white-space: nowrap;
+  text-align: left;
+}
+
+.check-apply th {
+  padding: 8px;
+}
+
+.check-apply td {
+  padding: 16px 8px;
+}
+
+.check-apply td a {
+  text-decoration: underline;
+  color: #0072EC;
+}
+
+.check-apply .td-checkbox {
+  max-width: 50px;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.data-count {
+  background-color: #F4F4F4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.count {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.count .batch {
+  background-color: #393939;
+  color: #ffffff;
+  margin: auto 0;
+}
+
+.count .text {
+  margin: auto 0;
+}
+
+.count .b-block {
+  padding: 16px;
+  height: 50px;
+}
+
+.pagenation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.pagenation .p-block {
+  padding: 0 16px;
+}
+
+.pagenation .p-block.text {
+  margin: auto;
+}
+
+.pagenation .p-block.page-arrow-wrap {
+  padding-right: 0;
+}
+
+.pagenation .p-block select {
+  height: 50px;
+}
+
+.pagenation .page-style {
+  background-color: #e0e0e0;
+  border: 0;
+  padding: 8px 16px;
+}
+
+.page-arrow-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page-arrow-wrap .page-arrow {
+  padding: 8px 16px;
+  background-color: #e0e0e0;
+  font-size: 14px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page-arrow-wrap .page-arrow span {
+  margin: auto;
+}
+
+.page-arrow-wrap .page-arrow:hover {
+  background-color: #b8b8b8;
+}
+
+.warning-message {
+  color: #DA1E28;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.warning-message .message-img {
+  width: 20px;
+  margin: auto 0;
+  margin-right: 8px;
+}
+
+.operate-part {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.operate-part .o-block {
+  background-color: #ffffff;
+  padding: 16px;
+}
+
+.operate-part .o-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.operate-part .o-title h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  margin: auto 0;
+}
+
+.operate-part .o-title h4::after {
+  content: "";
+  width: 20px;
+  height: 3px;
+  background-color: #FF5E15;
+  margin: auto 0;
+  margin-bottom: 0;
+}
+
+.operate-part .home-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 60%;
+          flex: 1 0 60%;
+}
+
+.operate-part .login-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 30%;
+          flex: 1 0 30%;
+  margin-left: 30px;
+}
+
+.tab-list {
+  margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.tab-list .list-each {
+  margin-right: 16px;
+  background-color: #e0e0e0;
+  padding: 8px 16px;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+
+.tab-list .list-each:last-child {
+  margin-right: 0;
+}
+
+.tab-list .list-each.active {
+  background-color: #FF5E15;
+  color: #ffffff;
+}
+
+.content-each ul li {
+  border-bottom: 1px solid #e0e0e0;
+  padding: 16px 0;
+  padding-left: 24px;
+  position: relative;
+  min-height: 50px;
+  font-size: 14px;
+}
+
+.content-each ul li a::after {
+  content: "";
+  background: url(../img/angle-right-solid.svg) center no-repeat;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.content-each ul li a:hover {
+  color: #0072EC;
+}
+
+.service-part {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.service-part .service-title {
+  color: #FF5E15;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.service-part .service-link a:hover {
+  color: #0072EC;
+}
+
+.login-form .l-block {
+  padding: 16px 0;
+}
+
+.forgot-p {
+  font-size: 14px;
+  color: #757575;
+}
+
+.forgot-p a {
+  color: #FF5E15;
+}
+
+.verify {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 20px 0;
+}
+
+.verify .verify-img {
+  padding: 0 16px;
+}
+
+.login-bottom a {
+  display: block;
+}
+
+.login-bottom span {
+  display: block;
+  margin-top: 16px;
+  color: #757575;
+  font-size: 14px;
+}
